[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 3

[profile.release]
overflow-checks = true

[dependencies]
aoc-parse = "0.1.9"
clap = { version = "4.0.32", features = ["derive"] }
fxhash = "0.2.1"
itertools = "0.10.5"
md5 = "0.7.0"
ndarray = "0.15.6"
z3 = "0.11.2"
