[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoclib"
path = "src/lib.rs"

[[bin]]
name = "aocbin"
path = "src/bin.rs"

[profile.dev]
opt-level = 3

[profile.release]
overflow-checks = true

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
criterion = { version = "0.4", features = ["html_reports"] }
fxhash = "0.2.1"
itertools = "0.10.5"
md5 = "0.7.0"
ndarray = "0.15.6"
reqwest = { version = "0.12.9", features = ["blocking", "cookies"] }
z3 = { version = "0.12.1", features = ["static-link-z3"] }

[[bench]]
name = "aoc_bench"
harness = false
